--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -25,6 +25,7 @@
       box-shadow: 0 1rem 3rem rgba($color: $color-black, $alpha: 0.1);
     }
   }
+
   &__background {
     height: 6rem;
     width: 6rem;
@@ -80,12 +81,6 @@
       padding: 1rem 2rem;
       color: $color-white;
       text-transform: uppercase;
-      //   background-image: linear-gradient(
-      //     120deg,
-      //     transparent 0%,
-      //     transparent 50%,
-      //     white 50%
-      //   );
 
       background-image: linear-gradient(
         120deg,
@@ -201,4 +196,14 @@
   //   &__button__invisible {
   //     z-index: 3000;
   //   }
+
+  &__button-href {
+    z-index: 8000;
+    position: absolute;
+    @include absCenter;
+    width: 100%;
+    height: 100%;
+    background-color: transparent;
+    border-radius: 50%;
+  }
 }
