--- a/sass/main.scss
+++ b/sass/main.scss
@@ -39,6 +39,7 @@
 @import "components/bg-video";
 @import "components/book";
 @import "components/form";
+@import "components/popup";
 // layout folder
 @import "layout/grid";
 @import "layout/header";
