--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -36,6 +36,9 @@
         }
     */
     overflow: hidden;
+    opacity: 0;
+    transform: translate(-50%, -50%) scale(0);
+    transition: all 0.4s;
   }
 
   &__left {
@@ -115,5 +118,7 @@
   }
 
   &:target &__content {
+    opacity: 1;
+    transform: translate(-50%, -50%) scale(1);
   }
 }
