--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,33 @@
     TLDR -> Clear fix will append a pseudo element. This pseudo element will then clear the floats. This workaround will then respect the margins specified
 */
 /**
+  Having these mixins to declare the media queries is a good practice.
+  This is because, in the future, if we want to change any of the 
+  pixels, then we can just change that here in the mixins.
+
+  As of 20 Jun 2022, these break points make the most sense for the devices
+  currently in the market
+  |-------------------|-------------------------|
+  | Pixel Range       | Device                  |
+  |-------------------|-------------------------|
+  | 0px - 600px       | Phone                   |
+  | 600px - 900px     | Tablet Portrait Mode    |
+  | 900px - 1200px    | Tablet Landscape Mode   |   
+  | 1200px - 1800px   | Normal Styles Apply     |
+  | 1800px+           | Tablet Portrait Mode    |
+  |-------------------|-------------------------|
+  
+  The media query manager below is using ems instead of rems, or px.
+  This is purely from experience. It is found that for media queries, it is 
+  better to use ems instead of rems
+  If the user changes the browser font size, then ems tend to respond better.
+  For media queries in particular, rems do not work as expected. ems tend to 
+  work better
+
+  1em = 16px (16 px is the default font-size in most browsers
+
+*/
+/**
   114 rem is like a standard width used for a row
   We use the max-width as this makes it easier to organize elements. Using the max-width will mean that we do not need to worry to much about how things will look on higher resolution displays
 */
@@ -109,6 +136,15 @@ html {
     Note: Since we are changing the root font-size here, we could make the argument that this bit should be moved into typography. However, we are actually changing the overall setting. It makes more sense to keep this here for now. This setting is defining what 1REM is. 
   */
   font-size: 62.5%; }
+  @media (min-width: 112.5em) {
+    html {
+      font-size: 75%; } }
+  @media (max-width: 75em) {
+    html {
+      font-size: 56.25%; } }
+  @media (max-width: 56.25em) {
+    html {
+      font-size: 50%; } }
 
 /**
  In this page, everything is container within the body. This is the style that will be applied by default. 
