Media queries added to base and typography

--- a/css/style.css
+++ b/css/style.css
@@ -150,7 +150,11 @@ html {
  In this page, everything is container within the body. This is the style that will be applied by default. 
 */
 body {
-  box-sizing: border-box; }
+  box-sizing: border-box;
+  padding: 4rem; }
+  @media (max-width: 75em) {
+    body {
+      padding: 0rem; } }
 
 .heading-primary {
   /**
@@ -172,20 +176,32 @@ body {
     font-weight: 400;
     letter-spacing: 3.5rem;
     animation: moveInLeft 1s ease-out; }
+    @media (max-width: 37.5em) {
+      .heading-primary--main {
+        /**
+        @content - This is how we can pass a block of code into the mixin
+      */
+        font-size: 5rem;
+        letter-spacing: 1rem; } }
   .heading-primary--sub {
     display: block;
     font-size: 2rem;
     font-weight: 700;
     letter-spacing: 1.75rem;
     animation: moveInRight 1s ease-out; }
+    @media (max-width: 37.5em) {
+      .heading-primary--sub {
+        /**
+        @content - This is how we can pass a block of code into the mixin
+      */
+        letter-spacing: 0.5rem; } }
 
 body {
   font-family: "Lato", sans-serif;
   font-weight: 400;
   font-size: 16;
   line-height: 1.7;
-  color: #777;
-  padding: 4rem; }
+  color: #777; }
 
 .heading-secondary {
   font-size: 3.5rem;
@@ -214,6 +230,15 @@ body {
   .heading-secondary:hover {
     transform: skewY(2deg) skewX(15deg) scale(1.1);
     text-shadow: 0.5rem 1rem 2rem rgba(0, 0, 0, 0.2); }
+  @media (max-width: 56.25em) {
+    .heading-secondary {
+      font-size: 3rem; } }
+  @media (max-width: 37.5em) {
+    .heading-secondary {
+      /**
+        @content - This is how we can pass a block of code into the mixin
+      */
+      font-size: 2.5rem; } }
 
 .heading-tertiary {
   font-size: 1.6rem;
