--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -19,6 +19,10 @@
     font-weight: 400;
     letter-spacing: 3.5rem;
     animation: moveInLeft 1s ease-out;
+    @include respond(phone) {
+      font-size: 5rem;
+      letter-spacing: 1rem;
+    }
   }
 
   &--sub {
@@ -27,6 +31,10 @@
     font-weight: 700;
     letter-spacing: 1.75rem;
     animation: moveInRight 1s ease-out;
+
+    @include respond(phone) {
+      letter-spacing: 0.5rem;
+    }
   }
 }
 
@@ -36,7 +44,6 @@ body {
   font-size: 16;
   line-height: 1.7;
   color: $color-grey-dark-1;
-  padding: 4rem;
 }
 
 .heading-secondary {
@@ -71,6 +78,13 @@ body {
   &:hover {
     transform: skewY(2deg) skewX(15deg) scale(1.1);
     text-shadow: 0.5rem 1rem 2rem rgba($color-black, 0.2);
+  }
+
+  @include respond(tab-port) {
+    font-size: 3rem;
+  }
+  @include respond(phone) {
+    font-size: 2.5rem;
   }
 }
 
