--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -30,6 +30,9 @@
   */
   -webkit-clip-path: polygon(0 0, 100% 0, 100% 75%, 0 100%);
   clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
+  @include respond(phone) {
+    clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
+  }
   /**
     The child elements will now use this parameter to align them selves 
   */
