--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -32,6 +32,7 @@ $grid-width: 114rem;
   This is the space between the rows
 */
 $gutter-vertical: 8rem;
+$gutter-vertical-small: 6rem;
 
 /**
   This is the space in between the columns
