--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,6 +1,9 @@
 .footer {
   background-color: $color-grey-dark-3;
   padding: 10rem 0;
+  @include respond(tab-port) {
+    padding: 8rem 0;
+  }
   font-size: 1.4rem;
   color: $color-grey-light-2;
   &__logo {
@@ -9,6 +12,10 @@
     &-box {
       text-align: center;
       margin-bottom: 8rem;
+
+      @include respond(tab-port) {
+        margin-bottom: 6rem;
+      }
     }
   }
   &__navigation {
@@ -18,6 +25,10 @@
         inline block will not occupy 100% of the width. It will occupy the width that the content will need
     */
     display: inline-block;
+    @include respond(tab-port) {
+      width: 100%;
+      text-align: center;
+    }
   }
   &__list {
     list-style: none;
@@ -26,6 +37,9 @@
     display: inline-block;
     &:not(:last-child) {
       margin-right: 1.5rem;
+      @include respond(tab-port) {
+        margin-right: 0;
+      }
     }
   }
   &__link {
@@ -60,5 +74,9 @@
     padding-top: 2rem;
     width: 80%;
     float: right;
+    @include respond(tab-port) {
+      width: 100%;
+      float: none;
+    }
   }
 }
