--- a/sass/components/_feature-box.scss
+++ b/sass/components/_feature-box.scss
@@ -9,10 +9,14 @@
   height: 40rem;
   @include respond(tab-port) {
     height: max-content;
+    padding: 2rem;
   }
   &__icon {
     font-size: 6rem;
     margin-bottom: 0.5rem;
+    @include respond(tab-port) {
+      margin-bottom: 0rem;
+    }
     display: inline-block;
     background-image: linear-gradient(
       to right,
@@ -26,8 +30,5 @@
 
   &:hover {
     transform: translateY(-3rem);
-  }
-
-  &__text {
   }
 }
