--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -7,6 +7,8 @@
     vh - view port height. This will make it so that the height of the header will always be 95% of the viewport height 
   */
   height: 95vh;
+
+  margin-bottom: 4rem;
   /**
     using the comma separator, we can add multiple images. The first one will be the top most image 
   */
