--- a/css/style.css
+++ b/css/style.css
@@ -261,12 +261,18 @@ body {
 
 .u-margin-bottom-big {
   margin-bottom: 8rem !important; }
+  @media (max-width: 56.25em) {
+    .u-margin-bottom-big {
+      margin-bottom: 5rem !important; } }
 
 .u-margin-bottom-small {
   margin-bottom: 1.5rem !important; }
 
 .u-margin-bottom-medium {
   margin-bottom: 4rem !important; }
+  @media (max-width: 56.25em) {
+    .u-margin-bottom-medium {
+      margin-bottom: 2.5rem !important; } }
 
 .u-margin-top-big {
   margin-top: 8rem !important; }
@@ -391,15 +397,37 @@ body {
     */
     position: absolute;
     transition: all 0.2s; }
+    @media (max-width: 56.25em) {
+      .composition__photo {
+        float: left;
+        position: relative;
+        width: 33.3333%;
+        box-shadow: 0 1.5rem 3rem rgba(0, 0, 0, 0.2); } }
     .composition__photo--p1 {
       left: 0;
       top: -2rem; }
+      @media (max-width: 56.25em) {
+        .composition__photo--p1 {
+          left: 0;
+          top: 0rem;
+          transform: scale(1.1); } }
     .composition__photo--p2 {
       right: 0;
       top: 2rem; }
+      @media (max-width: 56.25em) {
+        .composition__photo--p2 {
+          right: 0;
+          top: -20px;
+          z-index: 1;
+          transform: scale(1.3); } }
     .composition__photo--p3 {
       left: 20%;
       top: 10rem; }
+      @media (max-width: 56.25em) {
+        .composition__photo--p3 {
+          left: 0;
+          top: 0px;
+          transform: scale(1.1); } }
     .composition__photo:hover {
       transform: scale(1.05) translateY(-0.5rem);
       box-shadow: 0 2.5 6rem rgba(0, 0, 0, 0.6);
@@ -409,6 +437,9 @@ body {
       */
       outline: 1.5rem solid #55c57a;
       outline-offset: 2rem; }
+      @media (max-width: 56.25em) {
+        .composition__photo:hover {
+          transform: scale(1.4) translateY(-1rem); } }
   .composition:hover .composition__photo:not(:hover) {
     transform: scale(0.9); }
 
@@ -423,7 +454,8 @@ body {
   height: 40rem; }
   @media (max-width: 56.25em) {
     .feature-box {
-      height: max-content; } }
+      height: max-content;
+      padding: 2rem; } }
   .feature-box__icon {
     font-size: 6rem;
     margin-bottom: 0.5rem;
@@ -432,6 +464,9 @@ body {
     -webkit-background-clip: text;
     color: transparent;
     letter-spacing: 0.2rem; }
+    @media (max-width: 56.25em) {
+      .feature-box__icon {
+        margin-bottom: 0rem; } }
   .feature-box:hover {
     transform: translateY(-3rem); }
 
@@ -932,6 +967,7 @@ body {
     vh - view port height. This will make it so that the height of the header will always be 95% of the viewport height 
   */
   height: 95vh;
+  margin-bottom: 4rem;
   /**
     using the comma separator, we can add multiple images. The first one will be the top most image 
   */
@@ -1241,6 +1277,9 @@ body {
   background-color: #f7f7f7;
   padding: 25rem 0;
   margin-top: -20vh; }
+  @media (max-width: 56.25em) {
+    .section-about {
+      padding: 20rem 0; } }
 
 .section-features {
   padding: 20rem 0;
@@ -1252,6 +1291,10 @@ body {
   */
   transform: skewY(-7deg);
   margin-top: -10rem; }
+  @media (max-width: 56.25em) {
+    .section-features {
+      padding: 10rem 0;
+      margin-bottom: 10rem; } }
   .section-features > * {
     transform: skewy(7deg); }
 
@@ -1259,11 +1302,20 @@ body {
   background-color: #f7f7f7;
   padding: 25rem 0 15rem 0;
   margin-top: -20vh; }
+  @media (max-width: 56.25em) {
+    .section-tours {
+      padding: 20rem 0 10rem 0; } }
 
 .section-stories {
   padding: 15rem 0;
   position: relative; }
+  @media (max-width: 56.25em) {
+    .section-stories {
+      padding: 10rem 0; } }
 
 .section-book {
   padding: 15rem 0;
   background-image: linear-gradient(to right bottom, #7ed56f, #28b485); }
+  @media (max-width: 56.25em) {
+    .section-book {
+      padding: 10rem 0; } }
