--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -7,10 +7,17 @@
   //   background-color: red;
   padding: 25rem 0;
   margin-top: -20vh;
+  @include respond(tab-port) {
+    padding: 20rem 0;
+  }
 }
 
 .section-features {
   padding: 20rem 0;
+  @include respond(tab-port) {
+    padding: 10rem 0;
+    margin-bottom: 10rem;
+  }
   background-image: linear-gradient(
       to right bottom,
       rgba($color-primary-light, 0.8),
@@ -35,16 +42,25 @@
 .section-tours {
   background-color: $color-grey-light-1;
   padding: 25rem 0 15rem 0;
+  @include respond(tab-port) {
+    padding: 20rem 0 10rem 0;
+  }
   margin-top: -20vh;
 }
 
 .section-stories {
   padding: 15rem 0;
+  @include respond(tab-port) {
+    padding: 10rem 0;
+  }
   position: relative;
 }
 
 .section-book {
   padding: 15rem 0;
+  @include respond(tab-port) {
+    padding: 10rem 0;
+  }
   background-image: linear-gradient(
     to right bottom,
     $color-primary-light,
