--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -7,8 +7,13 @@
     vh - view port height. This will make it so that the height of the header will always be 95% of the viewport height 
   */
   height: 95vh;
+  margin-bottom: -25rem;
 
-  margin-bottom: 4rem;
+  @include respond(tab-port) {
+    height: 75vh;
+    margin-bottom: 1rem;
+  }
+
   /**
     using the comma separator, we can add multiple images. The first one will be the top most image 
   */
@@ -31,9 +36,9 @@
     corresponding corners: polygon( TL, TR, BR, BL) 
   */
   -webkit-clip-path: polygon(0 0, 100% 0, 100% 75%, 0 100%);
-  clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
+  clip-path: polygon(0 0, 100% 0, 100% 75%, 0 100%);
   @include respond(phone) {
-    clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
+    clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
   }
   /**
     The child elements will now use this parameter to align them selves 
@@ -60,6 +65,9 @@
       The percentages below are for aligning the text to the middle of the screen 
     */
     top: 40%;
+    @include respond(tab-port) {
+      top: 45%;
+    }
     left: 50%;
     /**
       This will move the origin to the center of the element rather than default of top edge and the left edge 
