--- a/css/style.css
+++ b/css/style.css
@@ -479,7 +479,6 @@ body {
   position: relative;
   height: 52rem; }
   .card__side {
-    background-color: orangered;
     height: 52rem;
     transition: all 0.8s ease;
     position: absolute;
@@ -587,6 +586,49 @@ body {
   .card__price-value {
     font-size: 6rem;
     font-weight: 100; }
+  @media (max-width: 56.25em) {
+    .card {
+      height: auto;
+      background-color: #fff;
+      border-radius: 1.6rem;
+      box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15); }
+      .card--front {
+        border-radius: 0rem;
+        border-top-left-radius: 1.6rem;
+        border-top-right-radius: 1.6rem; }
+      .card__side {
+        height: auto;
+        position: relative;
+        border-radius: 0rem;
+        background-color: transparent;
+        box-shadow: none; }
+        .card__side--back {
+          transform: rotateY(0deg);
+          clip-path: polygon(0 15%, 100% 0, 100% 100%, 0 100%);
+          border-bottom-left-radius: 1.6rem;
+          border-bottom-right-radius: 1.6rem; }
+      .card:hover .card__side--front {
+        transform: rotateY(0deg); }
+      .card:hover .card__side--back {
+        transform: rotateY(0deg); }
+      .card__cta {
+        position: relative;
+        top: 0%;
+        left: 0%;
+        transform: translate(0);
+        width: 100%;
+        text-align: center;
+        padding: 7rem 4rem 4rem 4rem;
+        background-color: transparent; }
+      .card__price-box {
+        text-align: center;
+        color: #fff;
+        margin-bottom: 3rem; }
+      .card__price-only {
+        font-size: 1.4rem; }
+      .card__price-value {
+        font-size: 4rem;
+        font-weight: 100; } }
 
 .story {
   width: 75%;
@@ -604,6 +646,21 @@ body {
   transform: skewX(-12deg); }
   .story > * {
     transform: skewX(12deg); }
+    @media (max-width: 56.25em) {
+      .story > * {
+        transform: skewX(0deg); } }
+  @media (max-width: 56.25em) {
+    .story {
+      width: 100%;
+      padding: 4rem;
+      padding-left: 7rem; } }
+  @media (max-width: 37.5em) {
+    .story {
+      /**
+        @content - This is how we can pass a block of code into the mixin
+      */
+      border-radius: 1.6rem;
+      transform: skewX(0); } }
   .story__shape {
     width: 15rem;
     height: 15rem;
@@ -614,6 +671,12 @@ body {
     clip-path: circle(50% at 50% 50%);
     transform: translateX(-3rem) skewX(12deg);
     position: relative; }
+    @media (max-width: 37.5em) {
+      .story__shape {
+        /**
+        @content - This is how we can pass a block of code into the mixin
+      */
+        transform: translateX(-3rem) skewX(0deg); } }
   .story__img {
     height: 100%;
     transform: translateX(-4rem) scale(1.4);
@@ -665,9 +728,21 @@ body {
   border-radius: 1.6rem;
   box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.3);
   transition: all 0.3s; }
+  @media (max-width: 75em) {
+    .book {
+      background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.9) 65%, rgba(0, 0, 0, 0.3) 65%), url(../img/nat-10.jpg); } }
+  @media (max-width: 56.25em) {
+    .book {
+      background-image: linear-gradient(to right, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 100%), url(../img/nat-10.jpg); } }
   .book__form {
     width: 50%;
     padding: 6rem; }
+    @media (max-width: 75em) {
+      .book__form {
+        width: 65%; } }
+    @media (max-width: 56.25em) {
+      .book__form {
+        width: 100%; } }
 
 .form {
   /**
@@ -741,6 +816,10 @@ body {
         They will be blocks, but within the same line
       */
       display: inline-block; }
+      @media (max-width: 56.25em) {
+        .form__radio-group {
+          width: 100%;
+          margin-bottom: 2rem; } }
     .form__radio-label {
       font-size: 1.6rem;
       cursor: pointer;
@@ -788,7 +867,7 @@ body {
       display: none; }
 
 .popup {
-  height: 100vh;
+  height: 100%;
   width: 100%;
   position: fixed;
   top: 0;
@@ -832,6 +911,7 @@ body {
     transition: all 0.4s; }
   .popup__left {
     width: calc(100% / 3);
+    transform: scale(1.2);
     /**
         Although it is possible to use floats to position these images, 
         it is not advisable. This is because of the fact that floats 
@@ -841,15 +921,35 @@ body {
     */
     display: table-cell;
     vertical-align: middle;
-    border-radius: 1.6rem; }
+    border-radius: 1.6rem;
+    /**
+      When displaying on a mobile, left and right will not work that well. This will be moved to top and bottom
+    */ }
+    @media (max-width: 75em) {
+      .popup__left {
+        display: block;
+        width: 100%; } }
   .popup__right {
     width: calc(100% / 3 * 2);
     display: table-cell;
     vertical-align: middle;
     padding: 3rem 5rem; }
+    @media (max-width: 75em) {
+      .popup__right {
+        display: block;
+        width: 100%;
+        padding: 3rem 7rem; } }
   .popup__img {
     display: block;
     width: 100%; }
+    @media (max-width: 75em) {
+      .popup__img {
+        float: left;
+        width: 50%;
+        padding: 0;
+        transform: translateY(-3rem);
+        margin-bottom: 2rem;
+        object-fit: scale-down; } }
   .popup__text {
     font-size: 1.4rem;
     margin-bottom: 4rem;
@@ -996,8 +1096,7 @@ body {
   */ }
   @media (max-width: 56.25em) {
     .header {
-      height: 75vh;
-      margin-bottom: 1rem; } }
+      height: 75vh; } }
   @media (max-width: 37.5em) {
     .header {
       /**
@@ -1286,7 +1385,14 @@ body {
   margin-top: -20vh; }
   @media (max-width: 56.25em) {
     .section-about {
-      padding: 20rem 0; } }
+      padding: 20rem 0;
+      padding-top: 25rem; } }
+  @media (max-width: 37.5em) {
+    .section-about {
+      /**
+        @content - This is how we can pass a block of code into the mixin
+      */
+      padding-top: 28rem; } }
 
 .section-features {
   padding: 20rem 0;
@@ -1325,4 +1431,4 @@ body {
   background-image: linear-gradient(to right bottom, #7ed56f, #28b485); }
   @media (max-width: 56.25em) {
     .section-book {
-      padding: 10rem 0; } }
+      padding: 10rem 0rem; } }
