--- a/sass/components/_book.scss
+++ b/sass/components/_book.scss
@@ -16,16 +16,35 @@
   background-size: cover;
   border-radius: $default-border-radius;
   box-shadow: 0 1.5rem 4rem rgba($color: $color-black, $alpha: 0.3);
-  //   height: 50rem;
+
   transition: all 0.3s;
 
-  //   &:hover,
-  //   &:active {
-  //     transform: scale(1.1);
-  //   }
+  @include respond(tab-land) {
+    background-image: linear-gradient(
+        105deg,
+        rgba($color-white, 0.9) 65%,
+        rgba($color-black, 0.3) 65%
+      ),
+      url(../img/nat-10.jpg);
+  }
+
+  @include respond(tab-port) {
+    background-image: linear-gradient(
+        to right,
+        rgba($color-white, 0.9) 0%,
+        rgba($color-white, 0.9) 100%
+      ),
+      url(../img/nat-10.jpg);
+  }
 
   &__form {
     width: 50%;
     padding: 6rem;
+    @include respond(tab-land) {
+      width: 65%;
+    }
+    @include respond(tab-port) {
+      width: 100%;
+    }
   }
 }
