--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -1,9 +1,10 @@
 .popup {
-  height: 100vh;
+  height: 100%;
   width: 100%;
   position: fixed;
   top: 0;
   left: 0;
+  // @include absCenter;
 
   background-color: rgba($color: $color-black, $alpha: 0.8);
 
@@ -43,6 +44,7 @@
 
   &__left {
     width: calc(100% / 3);
+    transform: scale(1.2);
     /**
         Although it is possible to use floats to position these images, 
         it is not advisable. This is because of the fact that floats 
@@ -54,6 +56,14 @@
     display: table-cell;
     vertical-align: middle;
     border-radius: $default-border-radius;
+    /**
+      When displaying on a mobile, left and right will not work that well. This will be moved to top and bottom
+    */
+
+    @include respond(tab-land) {
+      display: block;
+      width: 100%;
+    }
   }
 
   &__right {
@@ -62,11 +72,24 @@
     vertical-align: middle;
     // float: right;
     padding: 3rem 5rem;
+    @include respond(tab-land) {
+      display: block;
+      width: 100%;
+      padding: 3rem 7rem;
+    }
   }
 
   &__img {
     display: block;
     width: 100%;
+    @include respond(tab-land) {
+      float: left;
+      width: 50%;
+      padding: 0;
+      transform: translateY(-3rem);
+      margin-bottom: 2rem;
+      object-fit: scale-down;
+    }
   }
 
   &__text {
