--- a/sass/components/_story.scss
+++ b/sass/components/_story.scss
@@ -15,7 +15,22 @@
   transform: skewX(-12deg);
   & > * {
     transform: skewX(12deg);
+    @include respond(tab-port) {
+      transform: skewX(0deg);
+    }
   }
+
+  @include respond(tab-port) {
+    width: 100%;
+    padding: 4rem;
+    padding-left: 7rem;
+  }
+
+  @include respond(phone) {
+    border-radius: $default-border-radius;
+    transform: skewX(0);
+  }
+
   &__shape {
     width: 15rem;
     height: 15rem;
@@ -26,6 +41,9 @@
     clip-path: circle(50% at 50% 50%);
     transform: translateX(-3rem) skewX(12deg);
     position: relative;
+    @include respond(phone) {
+      transform: translateX(-3rem) skewX(0deg);
+    }
   }
 
   &__img {
