--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -9,6 +9,10 @@
   margin-top: -20vh;
   @include respond(tab-port) {
     padding: 20rem 0;
+    padding-top: 25rem;
+  }
+  @include respond(phone) {
+    padding-top: 28rem;
   }
 }
 
@@ -59,7 +63,7 @@
 .section-book {
   padding: 15rem 0;
   @include respond(tab-port) {
-    padding: 10rem 0;
+    padding: 10rem 0rem;
   }
   background-image: linear-gradient(
     to right bottom,
